fix: increase home-wrap gap

--- a/assets/scss/layout/_home-wrap.scss
+++ b/assets/scss/layout/_home-wrap.scss
@@ -1,7 +1,7 @@
 @include breakpoint(lg) {
  .home-wrap {
   display: flex;
-  gap: var(--size-110);
+  gap: var(--size-130);
  }
 }
 
